# pyaoi

./: .clang-format  .commit_template.txt  .commitlintrc.yml  .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  dev-requirements.txt  mark_implemented_functions.sh  pyaoi.py  pylama.ini  pyproject.toml  setup.py  test_pyaoi.py  tox.ini
src/: init.c  libstd.c  libstd.h  main.py  std.py  std_wrapper.py  util.py
test/: __init__.py  test_pyaoi.py  test_std.py
